# Rubik_Cube

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Cube.cpp  Cube.h  kociemba_helper.py  main.cpp
tests/: CMakeLists.txt  CubeTests.cpp
